# sert

./: .rustfmt.toml  Cargo.toml
.circleci/: aleo-new.sh  config.yml
.resources/: kcov.sh
cli/: errors.rs  main.rs
rust/: Cargo.toml
rust/src/api/: blocking.rs  mod.rs
rust/src/test_utils/: mod.rs
sdk/: jsdoc.json
wasm/: Cargo.toml
wasm/src/record/: record_plaintext.rs
website/: .babelrc
website/public/: index.html
website/src/: App.css
