
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[[bench]]
name = "private-key-encryption-at-rest"
path = "benches/private_key_encryption.rs"
harness = false

[dependencies.anyhow]
version = "1"

[dependencies.indexmap]
version = "1.9.3"

categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[[bench]]
name = "private-key-encryption-at-rest"
path = "benches/private_key_encryption.rs"
harness = false

[dependencies.anyhow]
version = "1"

[dependencies.indexmap]
version = "1.9.3"

categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[[bench]]
name = "private-key-encryption-at-rest"
path = "benches/private_key_encryption.rs"
harness = false

[dependencies.anyhow]
version = "1"

[dependencies.indexmap]
version = "1.9.3"

[dependencies.once_cell]
version = "1.13.1"

[dependencies.rand]
version = "0.8.5"

[dependencies.ureq]
features = [ "json" ]
optional = true
version = "2.9.1"

[dependencies.serde_json]
version = "1.0.91"

[dependencies.snarkvm-console]
features = [ "parallel" ]
# version = "0.9.14"
git = "https://github.com/AleoHQ/snarkVM"
rev = "74ff5ed"

[dependencies.snarkvm-synthesizer]
features = [ "parallel" ]
optional = true
# version = "0.9.14"
git = "https://github.com/AleoHQ/snarkVM"
rev = "74ff5ed"

[dependencies.snarkvm]
optional = true
workspace = true

[dev-dependencies.bencher]
version = "0.1.5"

[dev-dependencies.rand_chacha]
version = "0.3.1"

[features]
default = [ "full" ]
full = [ "ureq", "snarkvm-synthesizer", "snarkvm" ]
wasm = [ ]
